tests/parsing/smtlib/v2.6/errors/043_term_bad_term_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/043_term_bad_term_list_1.smt2", line 2, character 17-18:
2 | (assert (foo bar _))
                     ^
Error while parsing a list of terms, read the reserved word '_',
      but expected either a closing parenthesis, or another term; note that
      keywords and reserved words (such as '_', 'as', ...) are not terms, and
      thus are not allowed here.
